sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  val len:Int = getNombreValeurs()
  var compteur:Int = 0
  do {
  	for (i <- 0 to (len - 2)) {
    	if (plusPetit((i+1),i)){
      	echange(i,(i+1))
        compteur += 1
    	}
  	}
  }
}
